// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Group /> should render a basic group 1`] = `
<div
  className="orizzonte__group orizzonte__group--clearable"
  style={
    Object {
      "minWidth": "30px",
    }
  }
>
  <ForwardRef
    shown={true}
  >
    Test group
  </ForwardRef>
  <div
    className="orizzonte__group-btn-wrapper"
  >
    <button
      className="orizzonte__group-label"
      onClick={[Function]}
      type="button"
    >
      Test group
    </button>
    <OrizzonteGroupBtn
      hidden={false}
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`<Group /> should render an active group with description and min width 1`] = `
<div
  className="orizzonte__group orizzonte__group--shown orizzonte__group--empty"
  style={
    Object {
      "minWidth": "30px",
    }
  }
>
  <ForwardRef
    shown={true}
  >
    Test group
  </ForwardRef>
  <div
    className="orizzonte__group-btn-wrapper"
  >
    <button
      className="orizzonte__group-label"
      onClick={[Function]}
      type="button"
    >
      Test group
    </button>
    <OrizzonteGroupBtn
      hidden={true}
      onClick={[Function]}
    />
  </div>
  <OrizzonteList
    cache={Object {}}
    doneBtn={true}
    doneBtnLabel={null}
    isFilterGroup={true}
    minWidth={null}
    onApply={[Function]}
    onRemove={[Function]}
    onUpdate={[Function]}
    orientation="left"
    removeBtn={true}
    removeBtnLabel={null}
    syncCacheToGroup={[Function]}
    values={Object {}}
  >
    <div
      className="orizzonte__group-description"
      key="orizzonte-description"
    >
      Description for this group
    </div>
    <OrizzonteSelect
      disabled={false}
      fieldName="testSelect"
      information={null}
      label="Test select"
      notSetLabel={false}
      onUpdate={[Function]}
      options={
        Array [
          Object {
            "label": "Test value 1",
            "value": 1,
          },
          Object {
            "label": "Test value 2",
            "value": 2,
          },
        ]
      }
      value=""
    />
  </OrizzonteList>
</div>
`;

exports[`<Group /> should render an active group without top label and no remove button 1`] = `
<div
  className="orizzonte__group orizzonte__group--shown orizzonte__group--empty"
  style={
    Object {
      "minWidth": "30px",
    }
  }
>
  <div
    className="orizzonte__group-btn-wrapper"
  >
    <button
      className="orizzonte__group-label"
      onClick={[Function]}
      type="button"
    >
      Test group
    </button>
    <OrizzonteGroupBtn
      hidden={true}
      onClick={[Function]}
    />
  </div>
  <OrizzonteList
    cache={Object {}}
    doneBtn={true}
    doneBtnLabel={null}
    isFilterGroup={true}
    minWidth={null}
    onApply={[Function]}
    onRemove={[Function]}
    onUpdate={[Function]}
    orientation="left"
    removeBtn={false}
    removeBtnLabel={null}
    syncCacheToGroup={[Function]}
    values={Object {}}
  >
    <div
      className="orizzonte__group-description"
      key="orizzonte-description"
    >
      Description for this group
    </div>
    <OrizzonteSelect
      disabled={false}
      fieldName="testSelect"
      information={null}
      label="Test select"
      notSetLabel={false}
      onUpdate={[Function]}
      options={
        Array [
          Object {
            "label": "Test value 1",
            "value": 1,
          },
          Object {
            "label": "Test value 2",
            "value": 2,
          },
        ]
      }
      value=""
    />
  </OrizzonteList>
</div>
`;

exports[`<Group /> should render group without clear / remove / done buttons, and higher min width 1`] = `
<div
  className="orizzonte__group orizzonte__group--shown orizzonte__group--empty"
  style={
    Object {
      "minWidth": "30px",
    }
  }
>
  <ForwardRef
    shown={true}
  >
    Test group
  </ForwardRef>
  <div
    className="orizzonte__group-btn-wrapper"
  >
    <button
      className="orizzonte__group-label"
      onClick={[Function]}
      type="button"
    >
      Test group
    </button>
    <OrizzonteGroupBtn
      hidden={true}
      onClick={[Function]}
    />
  </div>
  <OrizzonteList
    cache={Object {}}
    doneBtn={false}
    doneBtnLabel={null}
    isFilterGroup={true}
    minWidth={400}
    onApply={[Function]}
    onRemove={[Function]}
    onUpdate={[Function]}
    orientation="left"
    removeBtn={false}
    removeBtnLabel={null}
    syncCacheToGroup={[Function]}
    values={Object {}}
  >
    <OrizzonteSelect
      disabled={false}
      fieldName="testSelect"
      information={null}
      label="Test select"
      notSetLabel={false}
      onUpdate={[Function]}
      options={
        Array [
          Object {
            "label": "Test value 1",
            "value": 1,
          },
          Object {
            "label": "Test value 2",
            "value": 2,
          },
        ]
      }
      value=""
    />
  </OrizzonteList>
</div>
`;

exports[`<Group /> should render nothing when the group is not included 1`] = `""`;
